cloudformation/#NATc.yml
#NATc
NatInstanceSercurityGroup:
  Type: AWS::EC2::SecurityGroup
  Properties:
    VpcId: !Ref VPC
    GroupDescription: Access to the nat instance
    SecurityGroupIngress:
      # http & https trafic
      - CidrIp: 10.0.0.128/25
        FromPort: 80
        ToPort: 80
        IpProtocol: tcp
      - CidrIp: 10.0.0.128/25
        FromPort: 443
        ToPort: 443
        IpProtocol: tcp
      #ssh access
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
      # routing
      - CidrIp: 10.0.0.128/25
        IpProtocol: icmp
        FromPort: -1
        ToPort: -1

NatInstance:
  Type: AWS::EC2::Instance
  Properties:
    UserData:
      Fn::Base64: !Sub |
        sudo -i
        sudo yum update -y
        sudo yum upgrade -y
        HOSTNAME=$(hostnamectl --static)
        sudo echo "127.0.0.1 "$HOSTNAME >> /etc/hosts
        sudo sysctl -w net.ipv4.ip_forward=1
        sudo /sbin/iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
        sudo yum install iptables-services
        sudo service iptables save
    InstanceType: !Ref pNatInstanceType
    ImageId: !Ref myImageId
    KeyName: !Ref SshKeyParameter
    SourceDestCheck: false
    NetworkInterfaces:
      - AssociatePublicIpAddress: "true"
        DeviceIndex: "0"
        GroupSet:
          - !Ref NatInstanceSercurityGroup
        SubnetId: !Ref PublicSubnet

NatRoute:
  Type: AWS::EC2::Route
  Properties:
    RouteTableId: !Ref PrivateRouteTable
    DestinationCidrBlock: 0.0.0.0/0
    InstanceId: !Ref NatInstance
